--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Henny+Penny' rel='stylesheet' type='text/css'>
 </head>
 <body>
+    <div id="title">BUG DODGER</div>
+    <div id="score">Score {0}</div>
+    
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
